# remarkastuff

./: .gitignore  CMakeLists.txt  toolchain.cmake
.circleci/: config.yml
flaskapp/: app.py  requirements.txt
src/: messages.h
src/client/: CMakeLists.txt  main.cpp
src/server/: CMakeLists.txt  FbFile.cpp  FbFile.h  main.cpp
